--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         }
         .card h2 { font-size: 1.7em; margin: 10px 0; }
         .card p { margin: 10px 0; line-height: 1.5; }
-        .card ul { text-align: left; max-width: 480px; margin: 14px auto; }
+        .card ul { text-align: left; max-width: 480px; margin: 14px auto; padding-left: 20px; }
         .card li { margin: 8px 0; }
-        .pros li::marker { content: "Positive "; color: #4ecdc4; }
-        .cons li::marker { content: "Warning "; color: #ff6b6b; }
+        .pros li::marker { content: "✅ "; color: #4ecdc4; }
+        .cons li::marker { content: "⚠️ "; color: #ff6b6b; }
         .vote-btn {
             width: 100%;
             padding: 18px;
@@ -97,31 +97,32 @@
             display:none; justify-content:center; align-items:center;
             flex-direction:column; font-size:2em; z-index:99999;
         }
+        a { color: #4ecdc4; }
     </style>
 </head>
 <body>
 
 <header>
     <h1>KZN-NYE 25/26 Destination Vote</h1>
-    <p class="subtitle">7–10 people • 31 Dec 2026 – 2 Jan 2027 • KZN South Coast<br>R1200–R1400 p/p (2 nights + food/drinks)</p>
+    <p class="subtitle">7–10 people • 31 Dec 2025 – 2 Jan 2026 • KZN South Coast<br>R1200–R1400 p/p (2 nights + food/drinks)</p>
 </header>
 
-<section class="destinations" id="destinations">section>
+<section class="destinations" id="destinations"></section>
 
 <section id="results">
     <h2>Live Results</h2>
-    <div id="progress-container">div>
-section>
+    <div id="progress-container"></div>
+</section>
 
 <div class="share">
     <a href="#" id="share" class="share-btn">Copy Share Link</a>
-div>
+</div>
 
-<canvas id="confetti">canvas>
+<canvas id="confetti"></canvas>
 <div id="thanks">
-    <div>Vote Received!</div>
+    <div>Vote Received! 🎉</div>
     <div style="font-size:0.6em;margin-top:20px;">Thanks — watch the results update live</div>
-div>
+</div>
 
 <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -154,65 +155,130 @@ div>
             id: "mantis",
             name: "Mantis & Moon Backpackers",
             area: "Umzumbe",
-            img: "https://images.unsplash.com/photo-1519046904884-53103b34b206?w=800",
+            img: "https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=800&fit=crop",
             cost: "R1200–R1350 pp",
             vibe: "Jungle surf lodge – bar, hot tub, wild NYE party",
             nye: "DJ, bonfire & fireworks on the lawn • R50 cover",
-            pros: ["Epic bar & social vibe","Hot tub nights","Surf lessons","Very group friendly"],
-            cons: ["Can get loud","Wildlife in rooms"],
-            link: "https://mantisandmoon.net"
+            type: "Backpackers lodge",
+            sleeping: "Cabins & rooms for 7–10",
+            energy: "High",
+            beach: "5-min walk",
+            amenities: "Pool, hot tub, bar, WiFi, braai, yoga",
+            pros: ["Epic jungle bar & social vibe", "Hot tub nights", "Surf lessons available", "Group-friendly", "Unique architecture"],
+            cons: ["Can get loud at night", "Basic facilities in some rooms", "Wildlife encounters"],
+            fun: "Party hard with DJs & bonfires; chill with yoga & beach days. Ideal for adventurous groups.",
+            link: "https://www.mantisandmoon.net/"
         },
         {
             id: "spot",
             name: "The Spot Backpackers",
             area: "Margate",
-            img: "https://images.unsplash.com/photo-1507525428034-b723cf961d3e?w=800",
+            img: "https://images.unsplash.com/photo-1519046904884-53103b34b206?w=800&fit=crop",
             cost: "R1150–R1300 pp",
-            vibe: "Classic beachfront hostel – direct beach access",
-            nye: "Free street party + ocean fireworks right outside",
-            pros: ["Cheapest option","Walk to everything","Sea views"],
-            cons: ["Shared bathrooms","Basic facilities"],
-            link: "https://thespotbackpackers.com"
+            vibe: "Beachfront hostel – sun, sea, casual hangs",
+            nye: "Free street party spillover + ocean fireworks",
+            type: "Hostel with cabins",
+            sleeping: "Log cabins & dorms for 7–10",
+            energy: "Medium-High",
+            beach: "Direct access",
+            amenities: "Bar, kitchen, braai areas, sea views",
+            pros: ["Direct beach access", "Budget-friendly", "Close to nightlife", "Secure parking"],
+            cons: ["Shared bathrooms", "Can feel basic"],
+            fun: "Beach days, braais, then Margate bars. Great for relaxed group vibes turning lively.",
+            link: "https://www.thespotbackpackers.co.za/"
+        },
+        {
+            id: "umkobi",
+            name: "Umkobi Lodge",
+            area: "Southbroom",
+            img: "https://images.unsplash.com/photo-1571003118755-17e458abfb60?w=800&fit=crop",
+            cost: "R1250–R1400 pp",
+            vibe: "Cozy log cabins – lagoon views, peaceful escape",
+            nye: "Sunset braai & nearby fireworks (R100 cover optional)",
+            type: "Self-catering log cabins",
+            sleeping: "3-bed houses (sleeps 6-8, multiple units)",
+            energy: "Medium",
+            beach: "10-min walk to Trafalgar Beach",
+            amenities: "Terrace, air-con, secure complex, braai",
+            pros: ["Stunning lagoon/ocean views", "Secure & tranquil", "Self-catering kitchen", "Near golf/spa"],
+            cons: ["Limited on-site partying", "Walk to main beach", "No WiFi"],
+            fun: "Kayak the lagoon, braai evenings, explore nearby beaches. Balanced for chill groups.",
+            link: "https://www.airbnb.com/rooms/18304337"
         },
         {
             id: "santorini",
             name: "Santorini Village",
             area: "Ramsgate",
-            img: "https://images.unsplash.com/photo-1533929736458-ca588d08c8be?w=800",
+            img: "https://cf.bstatic.com/xdata/images/hotel/max1024x768/448273217.jpg?k=3b5b5d0a5e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e&k=3b5b5d0a5e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e",
             cost: "R1300–R1400 pp",
-            vibe: "Greek-style apartments – stunning sea views",
-            nye: "Ramsgate main beach party 2 mins walk • R150 cover",
-            pros: ["Best views","Modern & clean","Pool + balconies"],
-            cons: ["Peak season premium"],
-            link: "https://booking.com – search Santorini Village Ramsgate"
+            vibe: "Greek-inspired apartments – seafront luxury",
+            nye: "Ramsgate beach bash 2 mins away • DJs & fireworks • R150 cover",
+            type: "Self-catering apartments",
+            sleeping: "3-bed units (6-9 people, book multiple)",
+            energy: "High",
+            beach: "Direct beachfront",
+            amenities: "Pool, balconies, braai, garage, WiFi",
+            pros: ["Panoramic sea views", "Modern & comfortable", "Pool area", "Walk to restaurants"],
+            cons: ["Peak premium pricing", "Shared facilities"],
+            fun: "Balcony sundowners to beach parties. Perfect for style & nightlife lovers.",
+            link: "https://www.booking.com/hotel/za/santorini-village-ramsgate.en-gb.html"
         },
         {
             id: "happy",
             name: "Happy Wanderers Resort",
             area: "Illovo",
-            img: "https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=800",
-            cost: "R1250–R1380 pp",
-            vibe: "Full resort – restaurant, bar, private beach",
-            nye: "On-site party, live music & fireworks • R80 cover",
-            pros: ["Everything on site","Restaurant","Great for big groups"],
-            cons: ["Monkeys","Can be busy"],
-            link: "https://happywanderers.co.za"
+            img: "https://images.unsplash.com/photo-1507525428034-b723cf961d3e?w=800&fit=crop",
+            cost: "R1200–R1350 pp",
+            vibe: "Family resort – beachfront, on-site fun",
+            nye: "Resort party with live music & fireworks • R80 cover",
+            type: "Cabins & apartments",
+            sleeping: "4-bed units (sleeps 8-10)",
+            energy: "High",
+            beach: "Direct access (meters away)",
+            amenities: "Restaurant, bar, pools, shop, games room",
+            pros: ["All-in-one site", "On-site dining", "Private beach", "Family/group activities"],
+            cons: ["Monkeys as pests", "Busy with families"],
+            fun: "Pool lounging, bar nights, beach games. Easy, no-drive group holiday.",
+            link: "https://happywanderers.co.za/"
+        },
+        {
+            id: "cutty",
+            name: "Premier Resort Cutty Sark",
+            area: "Scottburgh",
+            img: "https://cf.bstatic.com/xdata/images/hotel/max1024x768/510000000.jpg?k=somehash",
+            cost: "R1200–R1400 pp",
+            vibe: "Beach hotel – ocean views, resort amenities",
+            nye: "Gala dinner, DJ & beach fireworks • R200 cover",
+            type: "Sea-facing rooms",
+            sleeping: "Multiple rooms for 7–10",
+            energy: "Medium-High",
+            beach: "Direct access to main beach",
+            amenities: "Outdoor pool, bar, restaurant, WiFi, playground",
+            pros: ["Direct beach & views", "On-site bar/restaurant", "Free parking", "Clean & manicured grounds"],
+            cons: ["Some dated elements", "Family-oriented crowds"],
+            fun: "Poolside cocktails, scuba nearby, evening entertainment. Comfort for mixed groups.",
+            link: "https://www.booking.com/hotel/za/cutty-sark-scottburgh.html"
         }
     ];
 
     const cont = document.getElementById('destinations');
     places.forEach(p => {
+        const prosHtml = p.pros.map(x => `<li>${x}</li>`).join('');
+        const consHtml = p.cons.map(x => `<li>${x}</li>`).join('');
         cont.innerHTML += `
             <div class="card">
-                <img src="${p.img}" alt="${p.name}">
-                <h2>${p.name}<br><small>${p.area}small>h2>
-                <p><strong>${p.cost}strong> • ${p.vibe}p>
-                <p><strong>NYE:strong> ${p.nye}p>
-                <ul class="pros"><strong>Prosstrong>${p.pros.map(x=>`<li>${x}li>`).join('')}ul>
-                <ul class="cons"><strong>Consstrong>${p.cons.map(x=>`<li>${x}li>`).join('')}ul>
-                <p>More info / book: <a href="${p.link}" style="color:#4ecdc4">${p.link.replace('https://','')}a>p>
-                <button class="vote-btn" data-id="${p.id}">Vote ${p.name}button>
-            div>`;
+                <img src="${p.img}" alt="${p.name}" loading="lazy">
+                <h2>${p.name}<br><small>${p.area}</small></h2>
+                <p><strong>${p.cost}</strong> • ${p.vibe}</p>
+                <p><strong>NYE:</strong> ${p.nye}</p>
+                <p><strong>Type:</strong> ${p.type} • <strong>Sleeps:</strong> ${p.sleeping} • <strong>Energy:</strong> ${p.energy} • <strong>Beach:</strong> ${p.beach}</p>
+                <p><strong>Amenities:</strong> ${p.amenities}</p>
+                <ul class="pros"><strong>Pros:</strong>${prosHtml}</ul>
+                <ul class="cons"><strong>Cons:</strong>${consHtml}</ul>
+                <p><strong>Fun Factor:</strong> ${p.fun}</p>
+                <p>Book: <a href="${p.link}" target="_blank">${p.link.replace('https://www.', '').split('.')[0].toUpperCase()}</a></p>
+                <button class="vote-btn" data-id="${p.id}">Vote for ${p.name}!</button>
+            </div>`;
     });
 
     document.addEventListener('click', async e => {
@@ -222,13 +288,18 @@ div>
                 return;
             }
             const id = e.target.dataset.id;
-            await set(ref(db, 'votes/' + Date.now()), id);
-            localStorage.setItem('kzn-voted', 'true');
-            e.target.textContent = 'Voted!';
-            e.target.classList.add('voted');
-            confetti();
-            document.getElementById('thanks').style.display = 'flex';
-            setTimeout(()=> document.getElementById('thanks').style.display='none', 3000);
+            try {
+                await set(ref(db, 'votes/' + Date.now()), id);
+                localStorage.setItem('kzn-voted', 'true');
+                e.target.textContent = 'Voted! 🎉';
+                e.target.classList.add('voted');
+                confetti();
+                const thanks = document.getElementById('thanks');
+                thanks.style.display = 'flex';
+                setTimeout(() => thanks.style.display = 'none', 3000);
+            } catch (error) {
+                alert('Vote failed—check connection or Firebase rules.');
+            }
         }
     });
 
@@ -236,11 +307,11 @@ div>
         const c = document.getElementById('progress-container');
         c.innerHTML = '';
         places.forEach(p => {
-            const count = Object.values(votes).filter(v=>v===p.id).length;
-            const pct = total ? Math.round(count/total*100) : 0;
+            const count = Object.values(votes).filter(v => v === p.id).length;
+            const pct = total ? Math.round((count / total) * 100) : 0;
             c.innerHTML += `
-                <p><strong>${p.name}strong> — ${count} votesp>
-                <div class="progress-bar"><div class="progress-fill" style="width:${pct}%">div>div>
+                <p><strong>${p.name}</strong> — ${count} votes</p>
+                <div class="progress-bar"><div class="progress-fill" style="width:${pct}%"></div></div>
             `;
         });
     }
@@ -248,38 +319,52 @@ div>
     // Share link button
     document.getElementById('share').onclick = e => {
         e.preventDefault();
-        navigator.clipboard.writeText(location.href);
-        e.target.textContent = 'Link Copied!';
-        setTimeout(()=> e.target.textContent = 'Copy Share Link', 2000);
+        navigator.clipboard.writeText(location.href).then(() => {
+            const btn = e.target;
+            const orig = btn.textContent;
+            btn.textContent = 'Copied!';
+            setTimeout(() => btn.textContent = orig, 2000);
+        });
     };
 
-    // Confetti
+    // Confetti animation
     function confetti() {
         const canvas = document.getElementById('confetti');
         const ctx = canvas.getContext('2d');
-        canvas.width = innerWidth; canvas.height = innerHeight;
+        canvas.width = innerWidth;
+        canvas.height = innerHeight;
         const pieces = [];
-        for(let i=0;i<180;i++){
+        for (let i = 0; i < 200; i++) {
             pieces.push({
-                x: Math.random()*canvas.width,
-                y: Math.random()*canvas.height - canvas.height,
-                s: Math.random()*6+4,
-                c: `hsl(${Math.random()*360},80%,60%)`
+                x: Math.random() * canvas.width,
+                y: Math.random() * canvas.height - canvas.height,
+                s: Math.random() * 6 + 3,
+                vx: (Math.random() - 0.5) * 8,
+                vy: Math.random() * 5 + 5,
+                c: `hsl(${Math.random() * 360}, 80%, 60%)`
             });
         }
-        function draw(){
-            ctx.clearRect(0,0,canvas.width,canvas.height);
-            pieces.forEach(p=>{
-                p.y += p.s;
+        function draw() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            pieces.forEach(p => {
+                p.x += p.vx;
+                p.y += p.vy;
+                p.vy += 0.2;
+                p.rotation = (p.rotation || 0) + 0.1;
+                ctx.save();
+                ctx.translate(p.x, p.y);
+                ctx.rotate(p.rotation);
                 ctx.fillStyle = p.c;
-                ctx.fillRect(p.x, p.y, 10, 20);
+                ctx.fillRect(-5, -10, 10, 20);
+                ctx.restore();
+                if (p.y > canvas.height) p.y = -20;
             });
-            if(pieces.some(p=>p.y<canvas.height)) requestAnimationFrame(draw);
+            if (pieces.some(p => p.y < canvas.height)) requestAnimationFrame(draw);
         }
         draw();
     }
 
     updateResults();
-script>
-body>
-html>
+</script>
+</body>
+</html>
