--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
     const firebaseConfig = {
       apiKey: "AIzaSyATZipoJembfjyTrvay0XeGDeOoMXpwyIg",
       authDomain: "kzn-nye25.firebaseapp.com",
+      databaseURL: "https://kzn-nye25-default-rtdb.firebaseio.com",
       projectId: "kzn-nye25",
       storageBucket: "kzn-nye25.firebasestorage.app",
       messagingSenderId: "644646652528",
@@ -368,3 +369,4 @@
 </script>
 </body>
 </html>
+
