--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
     import { getDatabase, ref, onValue, set } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
     const firebaseConfig = {
-      apiKey: "AIzaSyATZipoJembfjyTrvay0XeGDeOoMXpwyIg",
-      authDomain: "kzn-nye25.firebaseapp.com",
-      databaseURL: "https://kzn-nye25-default-rtdb.firebaseio.com",
-      projectId: "kzn-nye25",
-      storageBucket: "kzn-nye25.firebasestorage.app",
-      messagingSenderId: "644646652528",
-      appId: "1:644646652528:web:0312c427dfe3d10f2f42b5"
-    };
+  apiKey: "AIzaSyATZipoJembfjyTrvay0XeGDeOoMXpwyIg",
+  authDomain: "kzn-nye25.firebaseapp.com",
+  databaseURL: "https://kzn-nye25-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "kzn-nye25",
+  storageBucket: "kzn-nye25.firebasestorage.app",
+  messagingSenderId: "644646652528",
+  appId: "1:644646652528:web:0312c427dfe3d10f2f42b5"
+};
 
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
@@ -369,4 +369,5 @@
 </script>
 </body>
 </html>
+
 
