--- a/index.html
+++ b/index.html
@@ -75,7 +75,12 @@
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 import { getDatabase, ref, onValue, push, set } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
-// Your Config    
+// Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
 const firebaseConfig = {
   apiKey: "AIzaSyA6NhPTVFApdc7jmvurzn1-hCr37pqpzq0",
   authDomain: "u25-462c0.firebaseapp.com",
@@ -85,6 +90,7 @@ const firebaseConfig = {
   appId: "1:728569015788:web:858d545e3cb085f74964c9"
 };
 
+// Initialize Firebase
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 const votesRef = ref(db, 'votes');
@@ -270,5 +276,6 @@ function confetti() {
 </script>
 </body>
 </html>
+
 
 
